devel
-----

* FE-229: Improve shard rebalancing UI.

* FE-20: fix UI placeholder format for locale when creating analyzers.

* Fixed Github issue #19175.
  This fixes a problem in traversal query optimization that was introduced
  in 3.11 and that can lead to traversal queries being aborted with an error
  `AQL: cannot and-combine normalized condition`.

* FE-240: disable JSON editor when viewing inverted index.

* FE-262: Improve Analyzer table UI.

* FE-287: fix number validation for replicationFactor and writeConcern.

* FE-285: Fix query download - use post request for query.

* FE-223: refactor arangosearch, handle nested fields special characters.

* Fixed two possible deadlocks which could occur if all medium priority
  threads are busy. One is that in this case the AgencyCache could no longer
  receive updates from the agency and another that queries could no longer
  be finished. This fixes BTS-1475 and BTS-1486.

* FE-166: Handle a space separated list to display multiple node labels in the
  Graph Viewer.

* FE-15: Removed green checkmark next to the version number and made
  keyboard shortcuts button easier to discover.

* Whenever there is a query request timeout in AQL (e.g., a server died)
  which causes the query to fail, the DBServers will now all directly kill
  their potentially ongoing parts of the query and not wait for garbage collection.

* Updated arangosync to v2.18.1.

* FE-211: Allow admins to edit gravatar email.

* Use libunwind in jemalloc profiling to make it available with libmusl
  and static binaries.

* Updated arangosync to v2.18.1-preview-1.

* BTS-1325: AQL: Fixed a possible deadlock with multiple parallel traversals.

* Upgraded OpenSSL to 3.1.1.

* BTS-1435: fixed invalid AQL optimization and added a safeguard.

* APM-766, SEARCH-479: Reduce memory overhead for ArangoSearch removes.

* Improve precision for ArangoSearch GEO_IN_RANGE function.

* Updated ArangoDB Starter to 0.15.8.
